frontend/test/bad/badtest0.cam

data Maybe a where
  Just      : a -> Maybe a a
  OtherJust : a -> Maybe
  Nothing   : Maybe a